# Testing-of-different-IluK-implementations

./: .gitattributes  CMakeLists.txt  main.cpp
Matrix Management/: COOMatrixSorted.cpp  COOMatrixSorted.h  CSCMatrix.cpp  CSCMatrix.h  CSRMatrix.cpp  CSRMatrix.h  DenseVector.cpp  DenseVector.h  LduMatrix.cpp  LduMatrix.h  MatrixManagement.cpp  MatrixManagement.h  SparseMatrix.h
Preconditioners/: DIC.cpp  DIC.h  IdentityPreconditioner.cpp  IdentityPreconditioner.h  Ilu_k.cpp  Ilu_k.h  Ilu_k_matlab_order.cpp  Ilu_k_matlab_order.h  Ilu_k_moderncpp_alternative_standard_order.cpp  Ilu_k_moderncpp_alternative_standard_order.h  Iluk_moderncpp_standard_order.cpp  Iluk_moderncpp_standard_order.h  Preconditioner.h  iluk_basiccpp_standard_order.cpp  iluk_basiccpp_standard_order.h
Solver/: PCG.cpp  PCG.h
Tests/: TestMain.h
Tests/IluKTest/: iluk_basiccpp_reverse_order_test.h  iluk_basiccpp_standard_order_test.h  iluk_light_basiccpp_test.h  iluk_light_moderncpp_test.h  iluk_moderncpp_reverse_order_test.h  iluk_moderncpp_standard_order_test.h
Tests/MatrixTest/: COOMatrixSorted_Test.h  CSRMatrix.h
Tests/TestFiles/: testfile.mtx
Tests/TestFiles/testing_Problem/: p_initial_guess.mtx  p_local_A.mtx  p_rhs.mtx
Tests/TestFiles/testing_Problem/lvl0/: ilu0_standard_solution.txt
Tests/TestingTools/: TestingTools.h
Tests/misc/: Preconditioner_test.h
misc/: TimeControl.cpp  TimeControl.h  data_structs.h
